--- a/TDZ.html
+++ b/TDZ.html
@@ -28,6 +28,7 @@
 <p>인스턴스를 생성한 다음 클래스를 선언 하면 ReferenceError 에러가 발생 line:45</p> 
 <p>ReferenceError란?: 객체는 존재하지 않는 변수를 참조했을 때 발생하는 에러</p>	
 <p>함수실행후 함수선언 에서는 에러 발생하지 않음 line:53</p>
+<p>함수실행후 함수선언 에서는 에러 발생하지 않음 line:53</p>
 
 <dl>
 <dt>const 변수 선언</dt>
